--- a/CA2_Talents_Webapp/Views/Home/Index.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
     <input type="submit" class="loginBtn" value="Login">
 
     <div class="bottom-text">
-        <a href="/Home/GuestUser">Continue as guest</a>
+        <a href="/Home/Main">Continue as guest</a>
         <hr />
         <a href="/Home/Register" class="reg-tag">Register</a>
     </div>
