--- a/CA2_Talents_Webapp/Views/Home/Discussion.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Discussion.cshtml
@@ -58,6 +58,19 @@
 
 
     $(document).ready(function () {
+        var url = window.location.href;
+        var disqusDiv = document.getElementById("disqus_thread");
+        var recommendationDiv = document.getElementById("inlineDiv");
+        if (url.indexOf("Premium") > -1) {
+            // Do nothing
+        } else if (url.indexOf("Standard") > -1) { // here
+            disqusDiv.style.display = "none";
+            // we aer  good
+        } else {
+            disqusDiv.style.display = "none";
+            recommendationDiv.style.display = "none";
+
+        }
         talentName = getUrlParameter("TalentName");
         likeBtn.value = talentName;
         user = getUrlParameter("User");
@@ -143,10 +156,10 @@
     // qf's
     var disqus_config = function () {
         // Replace PAGE_URL with your page's canonical URL variable
-        this.page.url = 'http://ec2-52-3-250-33.compute-1.amazonaws.com/Home/Discussion4';
+        this.page.url = 'http://ec2-52-3-250-33.compute-1.amazonaws.com/Home/Discussion' + talentId;
 
         // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        this.page.identifier = '583729';
+        this.page.identifier = talentId;
     };
 
     (function () {
@@ -155,19 +168,6 @@
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
-
-    // URL    
-    $(document).ready(function () {
-        var url = window.location.href;
-        if (url.includes("Premium")) {
-            // Do nothing
-        } else if (url.indexOf("Standard") > -1) { // here
-            var dis = documemnt.getElementById("disqus_thread");
-            dis.style.display = "none";
-            // we aer  good
-        }
-
-    });
 
     function getUrlParameter(sParam) {
         var sPageURL = window.location.search.substring(1),
