--- a/CA2_Talents_Webapp/Views/Home/Main.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Main.cshtml
@@ -405,7 +405,7 @@
             }
         }).done(function (data) {
             $('#loader').addClass('hidden');
-
+            var url = window.location.href
             for (var i = 0; i < data.length; i++) {
                 let talent = data[i];
 
@@ -431,29 +431,37 @@
                                 <div class="talentColumn">
                                     <div class="row">
                                         <p class="col-md-6 talentLabel">Title: </p>
-                                        <p id="talentTitle${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 16)">
-                                            ` + talent.talentTitle + `
-                                        </p>
+                                        <p id="talentTitle${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 100)">` + talent.talentTitle + `</p>
                                     </div>
                                     <div class="row">
                                         <p class="col-md-6 talentLabel">Name: </p>
-                                        <p id="talentName${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 100)">
-                                            ` + talent.talentName + `
-                                        </p>
+                                        <p id="talentName${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 100)">` + talent.talentName + `</p>
                                     </div>
                                     <div class="row">
                                         <p class="col-md-6 talentLabel">Description:</p>
-                                        <p id="talentDesc${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 100)">
-                                            ` + talent.talentDesc + `
-                                        </p>
+                                        <p id="talentDesc${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 500)">` + talent.talentDesc + `</p>
                                     </div>
                                     <input type="hidden" id="talentId${i}" class="talentContent" value=` + talent.talentId + `>
-                                    <input type="hidden" id="imageUrl${i}" class="talentContent" value=` + talent.imageURL +  `>
+                                    <input type="hidden" id="imageUrl${i}" class="talentContent" value='` + talent.imageURL +  `'>
                                 </div>
                             </div></td>`);
                 $rowElement.append($cellElement);
 
-                $cellElement = $(`<td style="vertical-align: top;"><div id="talentContentIconsColumn">
+                if (url.indexOf("Standard") <= -1 && url.indexOf("Premium") <= -1) {
+                    //Guest do not have CRUD access
+                    $cellElement = $(`<td style="vertical-align: top;"><div id="talentContentIconsColumn">
+                                        <div class="flex-column" id="manageTalentIcons">
+                                            <button class="btn btn-primary fullProfileBtn" type="button" id="fullProfileBtn" value="` + talent.talentName + `"
+                                            onclick="storeSession(` + talent.talentId + `, '` + talent.talentName + `', '` + talent.talentTitle + `', '` + talent.talentDesc + `', '` + talent.imageURL + `', '` + talent.createdDate + `')">
+                                            Full Profile
+                                            </button>
+                                        </div>
+                                    </div></td>`);
+
+                    $rowElement.append($cellElement);
+
+                } else {
+                    $cellElement = $(`<td style="vertical-align: top;"><div id="talentContentIconsColumn">
                                         <div class="flex-column" id="manageTalentIcons">
                                             <div class="talentIconRow">
                                                 <button id="cancelBtn${i}" onclick="cancelEdit(${i})" style="display:none">Cancel</button>
@@ -462,21 +470,22 @@
                                                       onClick="insertDeleteVals(` + talent.talentId + `, '` + talent.talentName + `', '` + talent.talentTitle + `')"
                                                       ><i class="fas fa-times"></i></span>
                                             </div>
-                                            <button class="btn btn-primary commentBtnClass" type="button" id="commentBtn" value="` + talent.talentName + `"
+                                            <button class="btn btn-primary fullProfileBtn" type="button" id="fullProfileBtn" value="` + talent.talentName + `"
                                             onclick="storeSession(` + talent.talentId + `, '` + talent.talentName + `', '` + talent.talentTitle + `', '` + talent.talentDesc + `', '` + talent.imageURL + `', '` + talent.createdDate + `')">
-                                            Comment
+                                            Full Profile
                                             </button>
                                         </div>
                                     </div></td>`);
 
-                $rowElement.append($cellElement);
+                    $rowElement.append($cellElement);
+                }
                 $('#talentsTableBody').append($rowElement);//inserting a new row
                 //End-- Defining the row element to hold lesson type information
             }//End of for loop
             setDefaultStyle(data.length);
 
             // Recombee
-            $('.commentBtnClass').click(function () {
+            $('.fullProfileBtn').click(function () {
                 var talentName = $(this).attr("value");
 
                 client.send(new recombee.AddDetailView(user, talentName),
@@ -493,6 +502,10 @@
         });
     }
 
+    function goToDiscussion(talentName) {
+        window.location.href = "/Home/Discussion?User=" + user + "&UserType=" + userplan + "&TalentName=" + talentName;
+    }
+
     function storeSession(talentId, talentName, talentTitle, talentDesc, imageURL, createdDate) {
         //alert(talentId + "," + talentName + "," + talentTitle + "," + talentDesc + "," + imageURL + "," + createdDate);
         sessionStorage.setItem('talentId', talentId);
@@ -506,56 +519,72 @@
 
     //for loop for dynamic element IDs
     function setDefaultStyle(noOfTalents) {
-        for (var x = 0; x < noOfTalents; x++) {
-            editIcon = document.getElementById("editIcon" + x); //+x
-            uploadBtn = document.getElementById("uploadImgBtn" + x);
-            uploadBtnColor = document.getElementById("talentImgBtn" + x);
-            talentTitle = document.getElementById("talentTitle" + x);
-            cross = document.getElementById("crossIcon" + x);
-            talentDesc = document.getElementById("talentDesc" + x);
-            talentName = document.getElementById("talentName" + x);
+        var url = window.location.href
+        if (url.indexOf("Standard") <= -1 && url.indexOf("Premium") <= -1) {
+            for (var x = 0; x < noOfTalents; x++) {
+                editIcon = document.getElementById("editIcon" + x); //+x
+                uploadBtn = document.getElementById("uploadImgBtn" + x);
+                uploadBtnColor = document.getElementById("talentImgBtn" + x);
+                talentTitle = document.getElementById("talentTitle" + x);
+                talentDesc = document.getElementById("talentDesc" + x);
+                talentName = document.getElementById("talentName" + x);
+                talentTitle.style.fontWeight = "lighter";
+                talentTitle.style.fontFamily = "sans-serif";
 
-            // Add required attribute to manage reward input fields and default cursor to uploadBtn
-            uploadBtnColor.style.cursor = "default";
-            // Trigger popover help text on hover
-            $('.editIcon').popover({
-                content: "Click here to edit",
-                html: true,
-                placement: 'bottom'
-            });
-            $('tr[name="managetalentTR"]').hover(function () {
-                trVal = $(this).attr("value");
-                $('#editIcon' + trVal).popover('show');
-            }, function () {
-                $('#editIcon' + trVal).popover('hide');
-            });
-            $('#crossIcon' + x).css("pointer-events", "none");
+                uploadBtn.style.display = "none";
+                uploadBtnColor.style.display = "none";
+            }
+        } else {
+            for (var x = 0; x < noOfTalents; x++) {
+                editIcon = document.getElementById("editIcon" + x); //+x
+                uploadBtn = document.getElementById("uploadImgBtn" + x);
+                uploadBtnColor = document.getElementById("talentImgBtn" + x);
+                talentTitle = document.getElementById("talentTitle" + x);
+                cross = document.getElementById("crossIcon" + x);
+                talentDesc = document.getElementById("talentDesc" + x);
+                talentName = document.getElementById("talentName" + x);
 
-            // CSS styles
-            uploadBtn.style.width = "0px";
-            uploadBtn.style.height = "0px";
-            uploadBtn.style.overflow = "hidden";
-            uploadBtnColor.style.display = "block";
-            uploadBtnColor.style.borderRadius = "0px";
-            uploadBtnColor.style.boxShadow = "0px 4px 6px 2px rgba(0,0,0,0.2)";
-            uploadBtnColor.style.marginTop = "-5px";
-            uploadBtnColor.style.backgroundColor = "#bababa";
-            uploadBtnColor.style.borderStyle = "none";
-            talentTitle.style.fontWeight = "lighter";
-            talentTitle.style.fontFamily = "sans-serif";
-            editIcon.style.color = "lightgrey";
-            editIcon.style.margin = "0 0.25rem";
-            editIcon.style.fontSize = "2.5rem";
-            cross.style.fontSize = "2.5rem";
-            cross.style.color = "lightgrey";
-            cross.style.margin = "0 0.25rem";
-            $('#editIcon' + x).hover(function () {
-                $(this).css("color", "orange");
-            }, function () {
-                $(this).css("color", "lightgrey");
-            });
-            editIcon.style.cursor = "pointer";
+                // Add required attribute to manage reward input fields and default cursor to uploadBtn
+                uploadBtnColor.style.cursor = "default";
+                // Trigger popover help text on hover
+                //$('.editIcon').popover({
+                //    content: "Click here to edit",
+                //    html: true,
+                //    placement: 'bottom'
+                //});
+                $('tr[name="managetalentTR"]').hover(function () {
+                    trVal = $(this).attr("value");
+                    $('#editIcon' + trVal).popover('show');
+                }, function () {
+                    $('#editIcon' + trVal).popover('hide');
+                });
+                $('#crossIcon' + x).css("pointer-events", "none");
 
+                // CSS styles
+                uploadBtn.style.width = "0px";
+                uploadBtn.style.height = "0px";
+                uploadBtn.style.overflow = "hidden";
+                uploadBtnColor.style.display = "block";
+                uploadBtnColor.style.borderRadius = "0px";
+                uploadBtnColor.style.boxShadow = "0px 4px 6px 2px rgba(0,0,0,0.2)";
+                uploadBtnColor.style.marginTop = "-5px";
+                uploadBtnColor.style.backgroundColor = "#bababa";
+                uploadBtnColor.style.borderStyle = "none";
+                talentTitle.style.fontWeight = "lighter";
+                talentTitle.style.fontFamily = "sans-serif";
+                editIcon.style.color = "lightgrey";
+                editIcon.style.margin = "0 0.25rem";
+                editIcon.style.fontSize = "2.5rem";
+                cross.style.fontSize = "2.5rem";
+                cross.style.color = "lightgrey";
+                cross.style.margin = "0 0.25rem";
+                $('#editIcon' + x).hover(function () {
+                    $(this).css("color", "orange");
+                }, function () {
+                    $(this).css("color", "lightgrey");
+                });
+                editIcon.style.cursor = "pointer";
+            }
         }
     }
     // End of document css and validation on load
@@ -814,16 +843,16 @@
         }
 
         var url = window.location.href;
-        if (url.includes("Premium")) {
+        if (url.indexOf("Premium") > -1) {
             // Do nothing
         }
-        else if (url.includes("Standard")) { // here
-            //$('.commentBtnClass').hide();
-            var commentBtnClass = document.getElementsByClassName("commentBtnClass");
-            commentBtnClass.style.display = "none";
+        else if (url.indexOf("Standard") > -1) { 
+            //Do nothing
         }
         else {
-
+            //Guest
+            var createBtn = document.getElementById("createBtn");
+            createBtn.style.display = "none";
         }
 
     });
@@ -843,9 +872,6 @@
         }
     }
     var userplan = $("#plan").val();
-    function goToDiscussion(talentName) {
-        window.location.href = "/Home/Discussion?User=" + user + "&TalentName=" + talentName + "&UserType=" + userplan;
-    }
 
     function createTalent() {
         event.preventDefault();
