--- a/CA2_Talents_Webapp/Views/Home/Register.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Register.cshtml
@@ -3,7 +3,7 @@
 }
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="~/css/Index.css">
+<link rel="stylesheet" href="~/css/Register.css">
 <style>
     .focus {
         border: solid blue 1px;
