--- a/CA2_Talents_Webapp/Views/Home/Register.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Register.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Register Page";
-}
+﻿@{ ViewData["Title"] = "Register Page"; }
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="~/css/Register.css">
@@ -22,7 +20,7 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
-
+<script src='https://www.google.com/recaptcha/api.js' async defer></script>
 
 <h3 class="header" id="registerHeader">Register as a user for the Life Time Talents application </h3>
 <br />
@@ -97,15 +95,20 @@
                 <div id="card-errors" role="alert"></div>
 
                 <div class="form-group">
-                    <button class="form-control btn btn-primary" id="submitBtn">Submit Payment</button>
+                    <button class="form-control btn btn-primary g-recaptcha" id="submitBtn" data-sitekey="6LdOWboZAAAAAMbphUUd_6QX68qdRDZXq2ZWzLXF" data-callback='onSubmit' data-action='submit'>Submit Payment</button>
                 </div>
             </form>
             <a href="/">Already a user? Login here...</a>
-            <hr />
-            <a href="/Home/GuestUser" class="reg-tag">Continue as guest</a>
         </div>
     </div>
 </div>
+
+<script>
+    function onSubmit(token) {
+        document.getElementById("payment-form").submit();
+        //alert("Pass");
+    }
+</script>
 
 
 <script>
@@ -128,15 +131,15 @@
     }
 
     var msg = getUrlParameter("Msg");
-    
+
     if (msg == null) {
-    } else if (msg =="Success") {
+    } else if (msg == "Success") {
         toastr.success('Successfully registered!');
     } else {
         toastr.error('Error registering!');
     }
 
-    function getUrlParameter(sParam) {  
+    function getUrlParameter(sParam) {
         var sPageURL = window.location.search.substring(1),
             sURLVariables = sPageURL.split('&'),
             sParameterName,
@@ -240,6 +243,5 @@
         form.submit();
     }
 </script>
-
 
 
